Update live operation text in homepage
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1128,7 +1128,7 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="dot"></span>
-                LIVE OP 200+ VELDEN
+                LIVE OP 50 Velden
             </div>
             <h1 class="hero-title">SCORR</h1>
             <p class="hero-subtitle">Live scores voor amateurvoetbal</p>
