Update team names and statistics in index.html
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1197,7 +1197,7 @@
                 <div class="step-number">3</div>
                 <div class="step-icon">📺</div>
                 <h3 class="step-title">Live Overal</h3>
-                <p class="step-desc">In de kantine, op de website, in de app — iedereen volgt mee. Real-time, altijd up-to-date.</p>
+                <p class="step-desc">In de kantine, op de website, in de app — iedereen volgt mee van opa, oma tot tante. Real-time, altijd up-to-date.</p>
             </div>
         </div>
     </section>
@@ -1288,16 +1288,16 @@
                         <div class="phone-match">
                             <div class="phone-match-header">
                                 <span class="phone-match-live"><span class="pulse"></span>1e HELFT</span>
-                                <span class="phone-match-time">Zaterdag 1</span>
+                                <span class="phone-match-time">O14-1</span>
                             </div>
                             <div class="phone-teams">
                                 <div class="phone-team">
-                                    <div class="phone-team-name">VV De Meeuwen</div>
+                                    <div class="phone-team-name">AFC 34</div>
                                     <div class="phone-team-sub">Thuis</div>
                                 </div>
                                 <div class="phone-score">2 - 1</div>
                                 <div class="phone-team">
-                                    <div class="phone-team-name">SC Rijssen</div>
+                                    <div class="phone-team-name">RAKVn</div>
                                     <div class="phone-team-sub">Uit</div>
                                 </div>
                             </div>
@@ -1319,11 +1319,11 @@
     <section class="stats-section">
         <div class="stats-grid">
             <div class="stat-item">
-                <div class="stat-number">200+</div>
+                <div class="stat-number">20+</div>
                 <div class="stat-label">Clubs aangesloten</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number">4.800</div>
+                <div class="stat-number">4.80</div>
                 <div class="stat-label">Wedstrijden gescoord</div>
             </div>
             <div class="stat-item">
@@ -1340,7 +1340,7 @@
     <!-- QUOTE -->
     <section class="quote-section">
         <p class="quote-text">
-            "Sinds we SCORR gebruiken zit de kantine vol tijdens uitwedstrijden. Iedereen volgt mee op het grote scherm."
+            "Sinds we SCORR gebruiken zit de kantine vol tijdens uitwedstrijden. Iedereen volgt mee op het grote scherm en vanuit huis."
         </p>
         <p class="quote-author"><strong>Kees van der Berg</strong> — Voorzitter VV De Meeuwen</p>
     </section>
@@ -1401,9 +1401,9 @@
     <!-- CTA -->
     <section class="cta-section">
         <h2 class="cta-title">Klaar om te <span class="gradient">scoren</span>?</h2>
-        <p class="cta-desc">Sluit je aan bij 200+ clubs die hun wedstrijden al live delen. Gratis starten, geen creditcard nodig.</p>
+        <p class="cta-desc">Sluit je aan bij 20+ clubs die hun wedstrijden al live delen.</p>
         <div class="cta-actions">
-            <a href="#" class="btn-primary">Start Nu Gratis ⚡</a>
+            <a href="#" class="btn-primary">Start Nu ⚡</a>
         </div>
     </section>
 
