--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1145,13 +1145,13 @@
     <!-- LIVE TICKER -->
     <div class="ticker-section">
         <div class="ticker-wrap">
-            <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">EVC — Zouaven/span><span class="ticker-score">2 - 1</span><span class="ticker-time">63'</span></div>
+            <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">EVC — Zouaven</span><span class="ticker-score">2 - 1</span><span class="ticker-time">63'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
             <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">FC Purmerend O14-1 — Hollandia O14-1</span><span class="ticker-score">0 - 3</span><span class="ticker-time">45+2'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
-            <div class="ticker-item"><span class="ticker-teams">RKAV O15-1— FC Purmerend O15-1</span><span class="ticker-score">4 - 2</span><span class="ticker-time">FT</span></div>
+            <div class="ticker-item"><span class="ticker-teams">RKAV O15-1 — FC Purmerend O15-1</span><span class="ticker-score">4 - 2</span><span class="ticker-time">FT</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
-            <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">FC Purmerend O16-1 — AFC"34 O16-2</span><span class="ticker-score">1 - 1</span><span class="ticker-time">28'</span></div>
+            <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">FC Purmerend O16-1 — AFC'34 O16-2</span><span class="ticker-score">1 - 1</span><span class="ticker-time">28'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
             <div class="ticker-item"><span class="ticker-teams">AVV Zeeburgia O10-1 — FC Purmerend O10-1</span><span class="ticker-score">1 - 2</span><span class="ticker-time">FT</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
@@ -1162,11 +1162,11 @@
             <div class="ticker-item"><div class="ticker-divider"></div></div>
             <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">ODIM 59 O15-1 — FC Purmerend O15-2</span><span class="ticker-score">0 - 3</span><span class="ticker-time">45+2'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
-            <div class="ticker-item"><span class="ticker-teams">Kolping Boys O13-1 — FC Purmerend O13-1/span><span class="ticker-score">2 - 4</span><span class="ticker-time">FT</span></div>
+            <div class="ticker-item"><span class="ticker-teams">Kolping Boys O13-1 — FC Purmerend O13-1</span><span class="ticker-score">2 - 4</span><span class="ticker-time">FT</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
             <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">HBOK O13-1 — FC Purmerend O13-1</span><span class="ticker-score">1 - 0</span><span class="ticker-time">28'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
-            <div class="ticker-item"><span class="ticker-teams">VVA/Spartaan O9-2 — FC Purmerend 09-1</span><span class="ticker-score">2 - 2</span><span class="ticker-time">FT</span></div>
+            <div class="ticker-item"><span class="ticker-teams">VVA/Spartaan O9-2 — FC Purmerend O9-1</span><span class="ticker-score">2 - 2</span><span class="ticker-time">FT</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
             <div class="ticker-item"><span class="ticker-live">● LIVE</span><span class="ticker-teams">FC Purmerend O18-2 — Hercules Zaandam O18-2</span><span class="ticker-score">0 - 1</span><span class="ticker-time">72'</span></div>
             <div class="ticker-item"><div class="ticker-divider"></div></div>
@@ -1297,7 +1297,7 @@
                                 </div>
                                 <div class="phone-score">2 - 1</div>
                                 <div class="phone-team">
-                                    <div class="phone-team-name">RAKVn</div>
+                                    <div class="phone-team-name">RAKV</div>
                                     <div class="phone-team-sub">Uit</div>
                                 </div>
                             </div>
