Fix team name and update quote author in HTML
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1297,7 +1297,7 @@
                                 </div>
                                 <div class="phone-score">2 - 1</div>
                                 <div class="phone-team">
-                                    <div class="phone-team-name">RAKV</div>
+                                    <div class="phone-team-name">RKAV</div>
                                     <div class="phone-team-sub">Uit</div>
                                 </div>
                             </div>
@@ -1340,9 +1340,9 @@
     <!-- QUOTE -->
     <section class="quote-section">
         <p class="quote-text">
-            "Sinds we SCORR gebruiken is de spanning langs het veld ook voelbaar in de kantine. Iedereen volgt mee op het grote scherm en vanuit huis."
+            "Sinds we SCORR gebruiken is de spanning langs het veld ook voelbaar in de kantine. Iedereen volgt mee op het grote scherm en ook de mensen thuis."
         </p>
-        <p class="quote-author"><strong>Kees van der Berg</strong> — Voorzitter VV De Meeuwen</p>
+        <p class="quote-author"><strong>Menno Klok</strong> — Voorzitter VV Monnickendam</p>
     </section>
 
     <!-- PRICING -->
