Update phone events with new player names
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1302,10 +1302,10 @@
                                 </div>
                             </div>
                             <div class="phone-events">
-                                <div class="phone-event"><span class="phone-event-time">12'</span> ⚽ J. de Vries</div>
-                                <div class="phone-event"><span class="phone-event-time">34'</span> 🟨 M. Bakker</div>
-                                <div class="phone-event"><span class="phone-event-time">41'</span> ⚽ T. Jansen</div>
-                                <div class="phone-event"><span class="phone-event-time">58'</span> ⚽ R. van Dijk</div>
+                                <div class="phone-event"><span class="phone-event-time">12'</span> ⚽ John</div>
+                                <div class="phone-event"><span class="phone-event-time">34'</span> 🟨 Mike</div>
+                                <div class="phone-event"><span class="phone-event-time">41'</span> ⚽ Fardau</div>
+                                <div class="phone-event"><span class="phone-event-time">58'</span> ⚽ Lendon</div>
                             </div>
                         </div>
                         <button class="phone-btn">⚽ Doelpunt!</button>
