Update team name from 'AFC 34' to 'FC Purmerend O14-1'
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1292,7 +1292,7 @@
                             </div>
                             <div class="phone-teams">
                                 <div class="phone-team">
-                                    <div class="phone-team-name">AFC 34</div>
+                                    <div class="phone-team-name">FC Purmerend O14-1</div>
                                     <div class="phone-team-sub">Thuis</div>
                                 </div>
                                 <div class="phone-score">2 - 1</div>
