--- a/frontend/homepage/index.html
+++ b/frontend/homepage/index.html
@@ -1128,20 +1128,13 @@
         <div class="hero-content">
             <div class="hero-badge">
                 <span class="dot"></span>
-                LIVE OP 50 Velden
+                LIVE OP ... Velden
             </div>
             <h1 class="hero-title">SCORR</h1>
             <p class="hero-subtitle">Live scores voor amateurvoetbal</p>
             <p class="hero-desc">
                 Van scheidsrechter naar kantine in 2 seconden. Elke goal, elke kaart, elk moment — real-time gedeeld met je hele club.
-            </p>
-            <div class="hero-actions">
-                <a href="#" class="btn-primary">Start Nu ⚡</a>
-                <a href="#hoe-het-werkt" class="btn-secondary">Bekijk Demo →</a>
-            </div>
-        </div>
-    </section>
-
+                
     <!-- LIVE TICKER -->
     <div class="ticker-section">
         <div class="ticker-wrap">
@@ -1235,12 +1228,6 @@
                 <h3 class="feature-title">Wedstrijdverslagen</h3>
                 <p class="feature-desc">Na afloop automatisch een professioneel wedstrijdverslag. Deel het via WhatsApp met ouders.</p>
             </div>
-            <div class="feature-card">
-                <div class="feature-emoji">🏆</div>
-                <h3 class="feature-title">Competitie Tracker</h3>
-                <p class="feature-desc">Volg live hoe concurrenten presteren. Perfect voor spannende competitie-eindes.</p>
-            </div>
-        </div>
     </section>
 
     <!-- DEMO / PHONE -->
@@ -1344,59 +1331,6 @@
         </p>
         <p class="quote-author"><strong>Menno Klok</strong> — Voorzitter VV Monnickendam</p>
     </section>
-
-    <!-- PRICING -->
-    <section class="pricing-section" id="pricing">
-        <div class="section-header">
-            <div class="section-tag">Prijzen</div>
-            <h2 class="section-title">Start vandaag nog</h2>
-            <p class="section-subtitle">Geen verborgen kosten. Opzeggen wanneer je wilt.</p>
-        </div>
-        <div class="pricing-grid">
-            <div class="price-card">
-                <div class="price-name">Starter</div>
-                <div class="price-desc">Perfect om te beginnen</div>
-                <div class="price-amount">€......</div>
-                <div class="price-period">Voor altijd</div>
-                <ul class="price-features">
-                    <li>1 team</li>
-                    <li>Live scores</li>
-                    <li>Basis statistieken</li>
-                    <li>Mobiele app</li>
-                </ul>
-                <button class="price-btn outline">Start Gratis</button>
-            </div>
-            <div class="price-card featured">
-                <div class="price-badge">Populair</div>
-                <div class="price-name">Club</div>
-                <div class="price-desc">Voor de hele vereniging</div>
-                <div class="price-amount">€..... <span>/ mnd</span></div>
-                <div class="price-period">Per club, onbeperkt teams</div>
-                <ul class="price-features">
-                    <li>Onbeperkt teams</li>
-                    <li>Kantine display</li>
-                    <li>Website widget</li>
-                    <li>Wedstrijdverslagen</li>
-                    <li>Uitgebreide statistieken</li>
-                </ul>
-                <button class="price-btn primary">Kies Club</button>
-            </div>
-            <div class="price-card">
-                <div class="price-name">Pro</div>
-                <div class="price-desc">Extra alles</div>
-                <div class="price-amount">€....<span>/ mnd</span></div>
-                <div class="price-period">Per club, premium support</div>
-                <ul class="price-features">
-                    <li>Alles van Club</li>
-                    <li>Competitie tracker</li>
-                    <li>Custom branding</li>
-                    <li>Priority support</li>
-                </ul>
-                <button class="price-btn outline">Kies Pro</button>
-            </div>
-        </div>
-    </section>
-
     <!-- CTA -->
     <section class="cta-section">
         <h2 class="cta-title">Klaar om te <span class="gradient">scoren</span>?</h2>
