Update title and subtitle for SCORR page
Signed-off-by: tvantatenhove-eng <t.van.tatenhove@outlook.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCORR — Live Scores voor Amateurvoetbal COMING SOON!</title>
+    <title>SCORR — Live Scores voor Amateurvoetbal!</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;700;800;900&family=JetBrains+Mono:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -1131,7 +1131,7 @@
                 LIVE OP ... Velden
             </div>
             <h1 class="hero-title">SCORR</h1>
-            <p class="hero-subtitle">Live scores voor amateurvoetbal</p>
+            <p class="hero-subtitle">Live scores voor amateurvoetbal COMING SOON!</p>
             <p class="hero-desc">
                 Van scheidsrechter naar kantine in 2 seconden. Elke goal, elke kaart, elk moment — real-time gedeeld met je hele club.
                 
